[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ugrd"
version = "1.24.2"
authors = [
  { name="Desultory", email="dev@pyl.onl" },
]
description = "Microgram Ramdisk, a simple initramfs generator using TOML defitions."
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

dependencies = [
    "zenlib >= 2.2.3",
    "pycpio >= 1.3.2"
]

[options]
include_package_data = true

[project.scripts]
ugrd = "ugrd.main:main"

[project.urls]
Homepage = "https://github.com/desultory/ugrd"
Issues = "https://github.com/desultory/ugrd/issues"
